tests/__snapshots__/validation-fixtureFileMatch-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'fixtureFileMatch' option must be a list.

  1 | {
  2 |   "fixtureFileMatch": "fixtures",
    |                       ~~~~~~~~~~
  3 |   "failFast": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:23

